Fix safari table + pagination layout bug

--- a/src/stylesheets/layouts/table-pattern.styl
+++ b/src/stylesheets/layouts/table-pattern.styl
@@ -72,10 +72,11 @@ Styleguide table-pattern
   display: flex
   flex-direction: column
   line-height: 1.5em
+  width: 100%
 
   /* Elements */
   table
-    width: 100vw
+    width: 100%
     table-layout: fixed
     background-color: white
     border-collapse: collapse
@@ -143,6 +144,7 @@ Styleguide table-pattern
   .table__body
     overflow-x: hidden
     overflow-y: auto
+    flex: 1
 
   .table__bulk-actions
     padding: 10px
